--- a/themes/luci-theme-bootstrap-mod/htdocs/luci-static/bootstrap_mod/cascade.css
+++ b/themes/luci-theme-bootstrap-mod/htdocs/luci-static/bootstrap_mod/cascade.css
@@ -6,8 +6,8 @@ body {
 body {
     background: #ffffff;
     color: #333;
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 14px;
+    font-family: "Helvetica Neue, Helvetica, Arial, sans-serif";
+    font-size: 13px;
     line-height: 1.8;
     margin: 0;
     /* padding-top: 60px; */
@@ -122,6 +122,7 @@ header {
     box-shadow: 0 2px 2px rgba(0, 0, 0, .1);
     z-index: 100;
     border-bottom: 2px solid #ccc;
+    background-image: linear-gradient(to bottom, #333333, #222222);
 }
 
 .brand {
@@ -556,29 +557,36 @@ p {
 
 .tabs,
 .cbi-tabmenu {
-    border-bottom: 2px solid #ddd;
-    margin-bottom: 20px;
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 15px;
 }
 
 .tabs li,
 .cbi-tabmenu li {
     display: inline-block;
+    margin-bottom: -1px;
 }
 
 .tabs a,
 .cbi-tabmenu a {
     display: block;
-    color: #404040;
+    /* color: #404040; */
     line-height: 34px;
-    margin-bottom: -2px;
-    margin-right: 20px;
-    padding: 0 3px;
+    margin-right: 3px;
+    padding: 0 15px;
 }
 
 .active a,
 .cbi-tab a {
     border-bottom: 2px solid #111;
     color: #111;
+}
+
+.tabs>li>a:hover,
+.cbi-tabmenu>li>a:hover {
+    text-decoration: none;
+    background-color: #eee;
+    border-color: #eee #eee #ddd;
 }
 
 
@@ -603,6 +611,7 @@ fieldset fieldset {
 table .cbi-value-field,
 .table .cbi-value-field {
     display: table-cell;
+    width: unset;
 }
 
 .cbi-value-title {
@@ -613,7 +622,7 @@ table .cbi-value-field,
     padding-top: 0.4em;
     line-height: 1.2em;
     float: left;
-    width: 13em;
+    width: 14em;
     margin-right: 1.5em;
     text-align: right;
     color: #404040;
@@ -622,6 +631,7 @@ table .cbi-value-field,
 .cbi-value-field {
     color: #811;
     display: table-cell;
+    width: 0.1%;
 }
 
 .cbi-section-table-cell {
@@ -808,6 +818,17 @@ select {
     line-height: 18px;
 }
 
+input[disabled],
+select[disabled],
+textarea[disabled],
+input[readonly],
+select[readonly],
+textarea[readonly] {
+    background-color: #f5f5f5;
+    border-color: #ddd;
+    color: unset;
+}
+
 table.cbi-section-table input,
 table.cbi-section-table textarea,
 table.cbi-section-table select,
@@ -880,11 +901,11 @@ input[type=file] {
 }
 
 .cbi-value-description {
-    /* display: inline; */
+    display: inline;
     background-image: url(/luci-static/resources/cbi/help.gif);
     /* background-position-x: 0px;
 	background-position-y: 1px; */
-    background-position: 0em 0.3em;
+    background-position: 0em 0.2em;
     background-repeat: no-repeat;
     padding: 0 1.2rem;
 }
@@ -906,15 +927,13 @@ input[type=file] {
 
 /* Button */
 
-.btn,
 .cbi-button,
 button {
-    border-radius: 6px !important;
+    border-radius: 4px;
     display: inline-block;
-    background: #fff;
+    background: linear-gradient(#fff, #fff 25%, #e6e6e6) no-repeat;
     border: 1px solid #ccc;
-    border-radius: 2px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, .05);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
     color: #333;
     line-height: 16px;
     padding: 0.5em;
@@ -922,16 +941,12 @@ button {
     margin-left: 0.2em;
 }
 
-.btn:active,
-.btn:focus,
 .cbi-button:active,
-.cbi-button:focus,
-button:active,
+.cbi-button:focus button:active,
 button:focus {
     border-color: #bbb;
 }
 
-/*
 .cbi-button-up,
 .cbi-input-up {
     background-position: center;
@@ -949,27 +964,23 @@ button:focus {
     padding-left: 15px;
     padding-right: 15px;
 }
-*/
 
 .cbi-button-add,
 .cbi-input-add {
-    background: #404040;
-    border-color: #404040;
-    color: #fff;
+    border-color: #4a4;
+    color: #4a4;
 }
 
 .cbi-button-add:active,
 .cbi-button-add:focus,
 .cbi-input-add:active,
-.cbi-input-add:focus {
-}
+.cbi-input-add:focus {}
 
 .cbi-button-remove,
 .cbi-input-remove,
 .cbi-section-remove input {
-    border-color: red;
-    background-color: red;
-    color: #fff;
+    border-color: #c44;
+    color: #c44;
 }
 
 .cbi-button-remove:active,
@@ -977,79 +988,74 @@ button:focus {
 .cbi-input-remove:active,
 .cbi-input-remove:focus,
 .cbi-section-remove input:active,
-.cbi-section-remove input:focus {
-}
+.cbi-section-remove input:focus {}
 
 .cbi-button-reload,
 .cbi-input-reload {
-    background: rgb(148, 143, 225);
     border-color: rgb(148, 143, 225);
-    color: #fff;
+    color: rgb(148, 143, 225);
 }
 
 .cbi-button-reload:active,
 .cbi-button-reload:focus,
 .cbi-input-reload:active,
-.cbi-input-reload:focus {
-}
+.cbi-input-reload:focus {}
 
 .cbi-button-reset,
 .cbi-input-reset {
-    background: #6bde84;
-    border-color: #6bde84;
-    color: #fff;
+    border-color: #4a4;
+    color: #4a4;
 }
 
 .cbi-button-reset:active,
 .cbi-button-reset:focus,
 .cbi-input-reset:active,
-.cbi-input-reset:focus {
-}
+.cbi-input-reset:focus {}
 
 .cbi-button-edit,
 .cbi-input-edit {
-    background: #ff7700;
     border-color: #ff7700;
-    color: #fff;
+    color: #ff7700;
 }
 
 .cbi-button-edit:active,
 .cbi-button-edit:focus,
 .cbi-input-edit:active,
-.cbi-input-edit:focus {
-}
+.cbi-input-edit:focus {}
 
 .cbi-button-apply,
 .cbi-input-apply {
-    color: #fff;
-    background: #0069d6;
-    border: 1px solid #0069d6;
+    border-color: #0069d6;
+    color: #0069d6;
 }
 
 .cbi-button-apply:active,
 .cbi-button-apply:focus,
 .cbi-input-apply:active,
-.cbi-input-apply:focus {
-}
+.cbi-input-apply:focus {}
 
 .cbi-button-save,
 .cbi-input-save {
-    background: rgb(148, 143, 225);
     border-color: rgb(148, 143, 225);
-    color: #fff;
+    color: rgb(148, 143, 225);
 }
 
 .cbi-button-save:active,
 .cbi-button-save:focus,
 .cbi-input-save:active,
-.cbi-input-save:focus {
-}
+.cbi-input-save:focus {}
 
 /* LuCI 18 DynamicList */
-input[type="text"] + .cbi-button,
-input[type="password"] + .cbi-button,
-select + .cbi-button {
-	padding: 4px 8px;
+input[type="text"]+.cbi-button,
+input[type="password"]+.cbi-button,
+select+.cbi-button {
+    vertical-align: top;
+    padding: 0.4em;
+    border-color: #ccc;
+    margin: 0 0 1px -3px;
+    font-size: 14px;
+    line-height: 18px;
+    border-radius: 5px;
 }
 
 
@@ -1121,9 +1127,9 @@ select + .cbi-button {
     text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
     border-radius: 4px;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-    display: inline-flex;
+    /* display: inline-flex; */
     flex-direction: column;
-    line-height: 1.2em;
+    line-height: 1.6em;
     min-width: 100px;
 }
 
@@ -1259,8 +1265,7 @@ footer a {
 
 /* login */
 body.node-main-login {
-    /* background: url(bg.jpg); */
-    background: linear-gradient(#22b9a4, #9a87d4);
+    background: rgba(0, 0, 0, 0.7);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     -moz-background-size: 100% 100%;
@@ -1272,8 +1277,13 @@ body.node-main-login>header {
     border-bottom: none;
 }
 
+body.node-main-login>header .brand {
+    display: none;
+}
+
 body.node-main-login .alert-message {
     z-index: 999;
+    display: none;
 }
 
 .node-main-login>.container>form {
@@ -1283,32 +1293,18 @@ body.node-main-login .alert-message {
     border-radius: .375rem;
     text-align: center;
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background: #fff;
 }
 
-.node-main-login>.container>form .errorbox {
-    color: red;
+.node-main-login>.container>form .errorbox,
+.node-main-login>.container>form .errorbox>p {
+    color: red !important;
 }
 
-.node-main-login>.container>form>.cbi-map>h2 {
-    width: 100px;
-    height: 100px;
-    color: #fff;
-    text-align: center;
-    letter-spacing: 4px;
-    display: block;
-    margin: -100px auto 15px auto;
-    padding: 0;
-    text-indent: -500px;
-    overflow: hidden;
-    border-radius: 60px;
-    /* border: #ccc 3px solid; */
-    background-image: url(wifi.png);
-    background-size: cover;
-    /* box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(156, 39, 176, 0.4); */
-}
+.node-main-login>.container>form>.cbi-map>h2 {}
 
 .node-main-login>.container>form input[name='luci_username'],
 .node-main-login>.container>form input[name='luci_password'] {
@@ -1332,6 +1328,14 @@ body.node-main-login .alert-message {
 
 .node-main-login>.container>form .cbi-page-actions {
     text-align: center !important;
+}
+
+.node-main-login>.container .cbi-button-apply {
+    width: 100% !important;
+}
+
+.node-main-login>.container .cbi-button-reset {
+    display: none;
 }
 
 /* luci18 */
@@ -1365,6 +1369,10 @@ body.node-main-login .alert-message {
 }
 
 /* luci 19 */
+.node-main-login>header .nav {
+    display: none;
+}
+
 body.modal-overlay-active {
     overflow: hidden;
     height: 100vh;
@@ -1386,7 +1394,7 @@ body.modal-overlay-active #modal_overlay>.modal {
     max-width: unset;
     min-height: 32px;
     min-width: 270px;
-    /* background: linear-gradient(to bottom, #fceec1, #eedc94) repeat-x !important; */
+    background: linear-gradient(to bottom, #fceec1, #eedc94) repeat-x !important;
     border-radius: 3px;
     padding: 1em;
     margin: 0;
@@ -1427,14 +1435,14 @@ body.modal-overlay-active #modal_overlay>.modal {
 
 .modal>* {
     flex-basis: 100%;
-    /* line-height: normal; */
+    line-height: normal;
     margin-bottom: .5em;
     max-width: 100%;
 }
 
 #modal_overlay .modal>* {
     flex-basis: 100%;
-    /* line-height: normal; */
+    line-height: normal;
     margin-bottom: .5em;
 }
 
@@ -1470,10 +1478,10 @@ body.modal-overlay-active #modal_overlay>.modal {
     max-width: 400px;
     width: auto;
     background: white;
-    /* border: 1px solid #ccc; */
+    border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
-    /* padding: 0 0.4em !important; */
+    padding: 0 0.4em !important;
 }
 
 .cbi-dynlist>.item {
@@ -1484,7 +1492,7 @@ body.modal-overlay-active #modal_overlay>.modal {
     border-radius: 3px;
     position: relative;
     pointer-events: none;
-    padding: 2px 2em 2px 10px;
+    padding: 2px 2em 2px 4px;
 }
 
 .cbi-dynlist>.item::after {
@@ -1530,9 +1538,8 @@ body.modal-overlay-active #modal_overlay>.modal {
 
 .btn.primary,
 .cbi-button-action.important {
-    color: #fff;
-    background: #0069d6;
-    border: 1px solid #0069d6;
+    border-color: #ff7700;
+    color: #ff7700;
 }
 
 .cbi-dropdown {
@@ -1572,21 +1579,4 @@ body.modal-overlay-active #modal_overlay>.modal {
     white-space: pre;
     overflow: hidden;
     text-overflow: ellipsis;
-}
-
-header [data-indicator] {
-	padding: 1px 3px 2px;
-	font-size: 9.75px;
-	font-weight: bold;
-	color: #fff !important;
-	text-transform: uppercase;
-	white-space: nowrap;
-	background-color: #bfbfbf;
-	border-radius: 3px;
-	text-shadow: none;
-	margin-left: .4em;
-}
-
-header [data-indicator][data-style="active"] {
-	background-color: #62cffc;
 }
