--- a/themes/luci-theme-bootstrap-mod/luasrc/view/themes/bootstrap_mod/footer.htm
+++ b/themes/luci-theme-bootstrap-mod/luasrc/view/themes/bootstrap_mod/footer.htm
@@ -2,24 +2,44 @@
  Copyright 2008 Steven Barth <steven@midlink.org>
  Copyright 2008 Jo-Philipp Wich <jow@openwrt.org>
  Copyright 2012 David Menting <david@nut-bolt.nl>
- Copyright 2020 Lienol <lawlienol@gmail.com>
+ Copyright 2018-2020 Lienol <lawlienol@gmail.com>
  Licensed to the public under the Apache License 2.0.
 -%>
 
 <%
 	local ver = require "luci.version"
+	local disp = require "luci.dispatcher"
+	local request  = disp.context.path
+	local category = request[1]
+	local tree = disp.node()
+	local categories = disp.node_childs(tree)
 %>
-
    <footer>
-    <a href="https://github.com/Lienol/openwrt-luci">Powered by <%= ver.luciname %> (<%= ver.luciversion %>)</a> / <%= ver.distversion %>
-    <ul class="breadcrumb pull-right" id="modemenu" style="display:none"></ul>
+    <a href="https://github.com/openwrt/luci">Powered by <%= ver.luciname %></a> / <%= ver.distversion %>
+    <% if #categories > 1 then %>
+     <ul class="breadcrumb pull-right" id="modemenu">
+	    <% for i, r in ipairs(categories) do %>
+		    <li<% if request[1] == r then %> class="active"<%end%>><a href="<%=controller%>/<%=r%>/"><%=striptags(translate(tree.nodes[r].title))%></a> <span class="divider">|</span></li>
+	    <% end %>
+     </ul>
+    <% end %>
    </footer>
+   </div>
   </div>
-  <script type="text/javascript">L.require('menu-bootstrap')</script>
  </body>
-</html>
-<script>
-	window.onload = function(){
+ <script>
+	function addLoadEvent(func) {
+		var oldonload = window.onload;
+		if (typeof window.onload != 'function') {
+			window.onload = func;
+		} else {
+			window.onload = function () {
+				oldonload();
+				func();
+			}
+		}
+	}
+	addLoadEvent(function(){
 		var content = document.getElementsByName("content");
 		var luci_username = document.getElementsByName("luci_username");
 		var luci_password = document.getElementsByName("luci_password");
@@ -49,6 +69,6 @@
 				}
 			}
 		}
-	}
-</script>
+	});
+ </script>
 </html>
