--- a/applications/luci-app-turboacc/luasrc/view/turboacc/status.htm
+++ b/applications/luci-app-turboacc/luasrc/view/turboacc/status.htm
@@ -10,12 +10,12 @@
 
 <script type="text/javascript">//<![CDATA[
 	var fastpath_state = document.getElementById('_fastpath_state');
-	var bbr_state = document.getElementById('_bbr_state');
 	var fullconenat_state = document.getElementById('_fullconenat_state');
+	var bbr_state = document.getElementById('_bbr_state');
 	var dnscaching_state = document.getElementById('_dnscaching_state');
 	XHR.poll(5, '<%=luci.dispatcher.build_url("admin", "network", "turboacc", "status")%>', null, function(x, status) {
 		if ( x && x.status == 200 ) {
-			fastpath_state.innerHTML = status.fastpath_state ? '<em><b style=color:green><%=luci.sys.exec("/etc/init.d/turboacc check_status fastpath")%></b></em>' : '<em><b style=color:red><%:NOT RUNNING%></b></em>';
+			fastpath_state.innerHTML = status.fastpath_state ? '<em><b style=color:green><%:RUNNING%></b></em>' : '<em><b style=color:red><%:NOT RUNNING%></b></em>';
 			fullconenat_state.innerHTML = status.fullconenat_state ? '<em><b style=color:green><%:RUNNING%></b></em>' : '<em><b style=color:red><%:NOT RUNNING%></b></em>';
 			bbr_state.innerHTML = status.bbr_state ? '<em><b style=color:green><%:RUNNING%></b></em>' : '<em><b style=color:red><%:NOT RUNNING%></b></em>';
 			dnscaching_state.innerHTML = status.dnscaching_state ? '<em><b style=color:green><%:RUNNING%></b></em>' : '<em><b style=color:red><%:NOT RUNNING%></b></em>';
