--- a/themes/luci-theme-argon/htdocs/luci-static/argon/less/cascade.less
+++ b/themes/luci-theme-argon/htdocs/luci-static/argon/less/cascade.less
@@ -658,7 +658,7 @@ small {
 
 
     .sidenav-header {
-        padding: 1.5rem;
+        padding: 1.5rem .5rem;
         text-align: center;
 
         .brand {
@@ -670,7 +670,6 @@ small {
             text-align: center;
             cursor: default;
             vertical-align: text-bottom;
-            white-space: nowrap;
         }
     }
 
@@ -804,7 +803,7 @@ header {
 
             span[data-indicator="poll-status"] {
                 color: #32325d;
-                background-color: #fff !important;
+                background-color: #fff;
             }
 
             span[data-style="active"] {
@@ -1016,7 +1015,6 @@ div[style="width:100%;height:300px;border:1px solid #000;background:#fff"] {
                             list-style: none;
 
                             a {
-                                white-space: nowrap;
                                 text-decoration: none;
                             }
 
@@ -1539,9 +1537,15 @@ tr>th,
     text-align: center !important;
 }
 
-.cbi-section-table-row>.cbi-value-field .control-group {
+.control-group {
     display: inline-flex;
     width: 100%;
+    flex-wrap: wrap;
+    gap: 2px;
+}
+
+.control-group > * {
+    vertical-align: middle;
 }
 
 div>table>tbody>tr:nth-of-type(2n),
@@ -1958,7 +1962,10 @@ td>table>tbody>tr>td,
     background-color: #f9f9f9;
 }
 
-.cbi-value-field,
+.cbi-value-field {
+    display: table-cell;
+}
+
 .cbi-value-description {
     line-height: 1.25;
     display: table-cell;
@@ -2643,6 +2650,7 @@ body.modal-overlay-active #modal_overlay {
 .cbi-page-actions {
     padding-top: 1rem;
     text-align: right;
+    justify-content: flex-end;
 }
 
 .cbi-page-actions>form[method="post"] {
@@ -2659,6 +2667,7 @@ body.modal-overlay-active #modal_overlay {
 
 .ifacebadge {
     display: inline-flex;
+    gap: .2rem;
     padding: .5rem .8rem;
     border-bottom: thin solid #ccc;
     background: #eee;
@@ -2676,7 +2685,6 @@ td>.ifacebadge,
 .ifacebadge>img {
     display: inline-block;
     align-self: flex-start;
-    margin: 0 .2rem;
 }
 
 .ifacebadge>img+img {
@@ -2699,6 +2707,7 @@ td>.ifacebadge,
     display: flex;
     flex-direction: column;
     height: 100%;
+    gap: 0.5em;
 }
 
 .network-status-table .ifacebox-body>span {
@@ -2709,15 +2718,21 @@ td>.ifacebadge,
 .network-status-table .ifacebox-body>div {
     display: flex;
     flex-wrap: wrap;
+    gap: .5rem;
 }
 
 .network-status-table .ifacebox-body .ifacebadge {
     align-items: center;
     flex: 1 1 auto;
     min-width: 220px;
-    margin: .5em 0em 0 0em;
     padding: .5em;
     background-color: #fff;
+
+    >span {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
 
 /* textarea */
@@ -2752,6 +2767,11 @@ td>.ifacebadge,
 /* config changes */
 .uci-change-list {
     font-family: monospace;
+    overflow: scroll;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .uci-change-list ins,
@@ -3831,8 +3851,7 @@ pre.command-output {
     }
 
     .cbi-progressbar::after {
-        font-size: .5rem;
-        line-height: 1.5;
+        font-size: .6rem;
     }
 
 
