--- a/themes/luci-theme-infinityfreedom/htdocs/luci-static/infinityfreedom/css/style.css
+++ b/themes/luci-theme-infinityfreedom/htdocs/luci-static/infinityfreedom/css/style.css
@@ -2,7 +2,7 @@
 *	InfinityFreedom is a clean HTML5 theme for LuCI. It is based on luci-theme-material.
 *
 *	luci-theme-infinityfreedom
-*	Copyright 2020 Richard Yu <xiaoqingfengatgm@gmail.com>
+*	Copyright 2020-2022 Richard Yu <xiaoqingfengatgm@gmail.com>
 *
 *	Have a bug? Please create an issue here on GitHub!
 *	https://github.com/xiaoqingfengATGH/luci-theme-infinityfreedom/issues
@@ -337,7 +337,15 @@ footer > a {
         transform: rotate(360deg)
     }
 }
-[id^="cbi-apply-"] {
+
+[id^="cbi-apply-"][id$="-status"]{
+	background: 0 0;
+	font-size: 1rem;
+	height: auto;
+	top: 140px;
+}
+
+[id^="cbi-apply-"]{
 	position: absolute;
 	z-index: 200;
 	left: 50%;
@@ -359,13 +367,6 @@ footer > a {
 
 [id^="cbi-apply-"]>img {
 	margin-top: 1rem;
-}
-
-[id^="cbi-apply-"]>[id^="cbi-apply-"] {
-	height: auto;
-	font-size: 1rem;
-	display: block;
-	background: 0 0;
 }
 
 .main-left {
@@ -1763,6 +1764,15 @@ small {
 	background-color: #9876AA;
 }
 
+.cbi-button-selectAll,
+.cbi-button-test {
+    display: inline-block;
+    min-width: 0;
+    padding: 0.2rem 0.3rem;
+    font-size: 10pt;
+	background-color: #9876AA;
+}
+
 .cbi-optionals {
     padding: 1rem 1rem 0 1rem;
     border-top: 1px solid #CCC;
@@ -2055,6 +2065,13 @@ div#cbi-timewol.cbi-map .cbi-value.cbi-value-last div.cbi-value-field font.timew
 	display: block;
 	padding-top:6px;
 }
+
+/* For luci-app-timecontrol */
+div#cbi-timecontrol.cbi-map fieldset.cbi-section-node > div.cbi-value > div.cbi-value-field > font {
+	display: block;
+	padding-top:6px;
+}
+
 /* For luci-app-kodexplorer */
 div#cbi-kodexplorer.cbi-map div#_nginx_status.cbi-value-field font {
 	display: block;
@@ -2197,8 +2214,93 @@ div#cbi-passwall.cbi-map div#set_node_div
 	background : rgba(7,34,62,.9);
 }
 
+div#cbi-passwall.cbi-map fieldset > fieldset > div#add_link_div
+{
+	position: fixed;
+	width: 55rem;
+	height: 20rem;
+}
+
+#add_link_div > div:nth-child(1) > label
+{
+	width: 30rem;
+}
+
+#add_link_div > div > div> textarea#nodes_link
+{
+	width: 52rem;
+	height: 10rem;
+}
+
+fieldset#cbi-passwall-nodes > div.cbi-section-node input.cbi-input-checkbox.nodes_select
+{
+	vertical-align: top;
+    margin-top: 5px;
+	width : 1.3rem;
+	height: 1.3rem;
+}
+
+#_passwall_status_fieldset > div > div:nth-child(5) > div > div.pure-u-1-3 > div > img{
+    filter: brightness(5.5);
+}
+
+#_passwall_status_fieldset > div > div:nth-child(7) > div > div.pure-u-1-3 > div > img
+{
+    filter:invert(1);
+}
+
+fieldset#cbi-passwall-global > fieldset.cbi-section-node-tabbed > div.cbi-tabcontainer > div.cbi-value > label > a,
+#dns_div > ul > b, 
+#dns_div > ul > li,
+fieldset#cbi-passwall-global > fieldset.cbi-section-node-tabbed > div.cbi-tabcontainer > div.cbi-value > div.cbi-value-field > a
+{
+    color: #FAC536!important;
+}
+
+/* For luci-app-beamInDocker */
+div#cbi-beamInDocker.cbi-map .cbi-value div.cbi-value-field font.ipsec-server_status ,
+div#cbi-beamInDocker.cbi-map .cbi-value div.cbi-value-field font#beamInDocker-download_status.beamInDocker-download_status
+{
+	display: block;
+	padding-top:6px;
+}
+
+pre#beamInDocker_download_log_viewer {
+	border: 1px solid #e4eaec;
+	width: 100%;
+    min-height: 15rem;
+	height:15rem;
+	overflow:scroll;
+    padding: 1rem;
+    font-size: 1.2rem;
+	line-height:120%;
+    color: #A9B7C6;
+    margin-bottom: 20px;
+    border-radius: 0;
+    background-color: rgba(7,34,62,.75);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .16), 0 0 2px 0 rgba(0, 0, 0, .12);
+	font-family : 'Consolas','Courier New', 'Hiragino Sans GB W6','Microsoft Yahei';
+	/* For FireFox */
+	scrollbar-color: rgba(238,238,238,.5) rgba(50,50,50,.3);
+	scrollbar-width: thin;
+}
+
+#cbi-beamInDocker-beam-beamInDocker_status > div ,
+#cbi-beamInDocker-beam-version > div
+{
+	display: block;
+	padding-top:6px;
+}
+
 /* For luci-app-softethervpn */
 div#cbi-softethervpn.cbi-map .cbi-value div.cbi-value-field font.softethervpn_status
+{
+	display: block;
+	padding-top:6px;
+}
+
+/* For luci-app-homeconnect */
+div#cbi-homeconnect.cbi-map .cbi-value div.cbi-value-field > font.softethervpn_status
 {
 	display: block;
 	padding-top:6px;
